# transcriber-app

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts  google-services.json  proguard-rules.pro
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/cpp/: CMakeLists.txt  whisper_jni.cpp
composeApp/src/androidMain/kotlin/com/romeodev/: MainActivity.kt  MyApplication.kt
composeApp/src/androidMain/kotlin/com/romeodev/core/: AppConstants.android.kt  CurrentPlatform.android.kt  TranscriberEngine.android.kt
composeApp/src/androidMain/kotlin/com/romeodev/core/db/: DatabaseProvider.android.kt
composeApp/src/androidMain/kotlin/com/romeodev/core/db/di/: DatabaseModule.android.kt
composeApp/src/androidMain/kotlin/com/romeodev/core/di/: AndroidModelPathProvider.kt  AndroidModule.kt  AndroidRecorderImpl.kt
composeApp/src/androidMain/kotlin/com/romeodev/core/utils/datastore/: CreateDataStore.android.kt
composeApp/src/androidMain/kotlin/com/romeodev/core/utils/di/: UtilsModule.android.kt
composeApp/src/androidMain/kotlin/com/romeodev/core/utils/intents/: IntentUtils.android.kt
composeApp/src/androidMain/kotlin/com/romeodev/core/utils/platform/: PlatformType.android.kt  PlatformUtils.android.kt
composeApp/src/androidMain/kotlin/com/romeodev/helpers/media/: RiffWaveHelper.kt
composeApp/src/androidMain/kotlin/com/romeodev/helpers/recorder/: Recorder.kt
composeApp/src/androidMain/kotlin/com/romeodev/media/: RiffWaveHelper.kt
composeApp/src/androidMain/kotlin/com/romeodev/recorder/: Recorder.kt
composeApp/src/androidMain/kotlin/com/romeodev/starter_features/trancription/core/: TranscriptEngine.android.kt
composeApp/src/androidMain/kotlin/com/romeodev/theme/: Theme.android.kt
composeApp/src/androidMain/kotlin/com/romeodev/whisper/: WhisperBridge.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/drawable/: apple_logo_black.xml
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/kotlin/com/romeodev/: App.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/: AppConstants.kt  CurrentPlatform.kt  TranscriberEngine.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/datastore/common/: CommonDataStore.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/datastore/di/: DataStoreModule.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/datastore/onboarding/: OnboardingDataStore.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/datastore/theme/: ThemeDataStore.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/db/: DatabaseProvider.kt  KmpStarterDatabase.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/db/di/: DatabaseModule.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/di/: CoreModule.kt  InitKoin.kt  ModelPathProvider.kt  WhisperModule.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/events/controllers/: SnackbarController.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/events/di/: EventsModule.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/events/enums/: ThemeMode.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/events/navigator/: DefaultNavigator.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/events/utils/: ObserveAsEvents.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/firebase/auth/: AuthUtils.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/ktor/di/: KtorModule.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/navigation/: ComposeNavigation.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/navigation/nav_graphs/: AppNavGraph.kt  StarterNavGraph.kt  TranscriberGraph.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/navigation/screens/: StarterScreens.kt  TranscriberScreens.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/purchases/: InitRevenueCat.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/purchases/di/: PurchasesModule.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/ui/components/: PreviewWrapper.kt  SideBorder.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/ui/composition_locals/: CommonCompositionLocals.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/ui/layouts/: MeasurableLayout.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/ui/modifiers/: CupertinoOverscrollEffect.kt  Image.kt  TopAppBar.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/ui/screens/: WelcomeScreen.kt
composeApp/src/commonMain/kotlin/com/romeodev/core/utils/common/: TimeUtils.kt
composeApp/src/commonMain/kotlin/com/romeodev/theme/: Color.kt  Dimens.kt  Theme.kt  Type.kt
composeApp/src/iosMain/c_interop/: whisper.def
composeApp/src/iosMain/kotlin/com/romeodev/: AudioUtils.kt  MainViewController.kt
composeApp/src/iosMain/kotlin/com/romeodev/core/: AppConstants.ios.kt  CurrentPlatform.ios.kt  TranscriberEngine.ios.kt
composeApp/src/iosMain/kotlin/com/romeodev/core/db/: DatabaseProvider.ios.kt  KmpStarterDatabase.ios.kt
composeApp/src/iosMain/kotlin/com/romeodev/core/di/: IosModelPathProvider.kt  IosModule.kt  IosRecorderImpl.kt
composeApp/src/iosMain/kotlin/com/romeodev/theme/: Theme.ios.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: GoogleService-Info.plist  Info.plist  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
iosApp/iosApp/Transcriber/: IosTranscriber.swift
lib/: build.gradle.kts
lib/src/main/java/com/romeodev/lib/: LibWhisper.kt  WhsiperContext.kt
lib/src/main/jni/whisper/: CMakeLists.txt  jni.c
whisper.cpp/: CMakeCache.txt  DartConfiguration.tcl  whisper-config.cmake
whisper.cpp/examples/whisper.swiftui/whisper.swiftui.demo/Models/: WhisperState.swift
whisper.cpp/examples/whisper.swiftui/whisper.swiftui.xcodeproj/: project.pbxproj
whisper.cpp/src/: CMakeLists.txt  whisper.cpp
(+107 files in other folders)
